--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     ext {
-        kotlin_version = '1.2.30'
-        coroutinesVersion = '0.22.3'
+        kotlin_version = '1.2.31'
+        coroutinesVersion = '0.22.5'
     }
     repositories {
         maven { url 'https://maven.fabric.io/public' }
@@ -16,10 +16,7 @@ buildscript {
 }
 
 repositories {
-    jcenter()
-
     maven { url "https://jitpack.io" }
-    maven { url 'https://maven.google.com' }
     maven { url 'https://maven.fabric.io/public' }
 }
 
@@ -28,8 +25,8 @@ apply plugin: 'kotlin-android'
 apply plugin: 'io.fabric'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.2"
+    compileSdkVersion 27
+    buildToolsVersion "27.0.3"
     defaultConfig {
         applicationId "com.czbix.v2ex"
         minSdkVersion 16
@@ -74,49 +71,52 @@ kotlin {
 
 
 // Android support library version
-ext.support_version = '26.1.0'
-ext.gms_version = '11.8.0'
+ext.support_version = '27.1.1'
+ext.gms_version = '15.0.0'
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile "com.android.support:support-compat:$support_version"
-    compile "com.android.support:support-core-utils:$support_version"
-    compile "com.android.support:support-fragment:$support_version"
-    compile 'com.google.guava:guava:20.0'
-    compile 'com.squareup.okhttp3:okhttp:3.8.1'
-    compile 'com.google.code.gson:gson:2.7'
-    compile "com.android.support:appcompat-v7:$support_version"
-    compile "com.android.support:recyclerview-v7:$support_version"
-    compile "com.android.support:cardview-v7:$support_version"
-    compile 'org.jsoup:jsoup:1.10.2'
-    compile "com.android.support:design:$support_version"
-    compile 'com.github.franmontiel:PersistentCookieJar:v1.0.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation "com.android.support:support-compat:$support_version"
+    implementation "com.android.support:support-core-utils:$support_version"
+    implementation "com.android.support:support-fragment:$support_version"
+    implementation 'com.google.guava:guava:24.0-android'
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation "com.android.support:appcompat-v7:$support_version"
+    implementation "com.android.support:recyclerview-v7:$support_version"
+    implementation "com.android.support:cardview-v7:$support_version"
+    implementation 'org.jsoup:jsoup:1.11.3'
+    implementation "com.android.support:design:$support_version"
+    implementation 'com.github.franmontiel:PersistentCookieJar:v1.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
 
-    compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile ('com.github.bumptech.glide:okhttp3-integration:1.4.0') {
+    implementation 'com.github.bumptech.glide:glide:3.8.0'
+    implementation ('com.github.bumptech.glide:okhttp3-integration:1.5.0') {
         exclude group: 'glide-parent'
     }
 
-    compile "io.reactivex.rxjava2:rxjava:2.1.5"
-    compile 'io.reactivex.rxjava2:rxkotlin:2.1.0'
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation "io.reactivex.rxjava2:rxjava:2.1.9"
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.1.0'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
 
-    compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutinesVersion"
-    compile "org.jetbrains.kotlinx:kotlinx-coroutines-rx2:$coroutinesVersion"
-    compile "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutinesVersion"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-rx2:$coroutinesVersion"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion"
 
-    compile "com.google.android.gms:play-services-analytics:$gms_version"
-    compile "com.google.firebase:firebase-messaging:$gms_version"
-    compile 'com.firebase:firebase-jobdispatcher:0.5.2'
-    compile('com.crashlytics.sdk.android:crashlytics:2.7.0@aar') {
+    implementation "com.google.android.gms:play-services-analytics:$gms_version"
+    implementation "com.google.firebase:firebase-messaging:$gms_version"
+    implementation 'com.firebase:firebase-jobdispatcher:0.8.5'
+    implementation('com.crashlytics.sdk.android:crashlytics:2.8.0@aar') {
         transitive = true
     }
-    compile "com.android.support:customtabs:$support_version"
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "com.android.support:customtabs:$support_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
-    testCompile 'org.mockito:mockito-core:1.10.19'
-    provided 'org.ccil.cowan.tagsoup:tagsoup:1.2.1'
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+    implementation "android.arch.lifecycle:reactivestreams:1.1.1"
+    implementation 'android.arch.paging:runtime:1.0.0-beta1'
+
+    compileOnly 'org.ccil.cowan.tagsoup:tagsoup:1.2.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
